--- a/astro-tailwind-alston/src/components/Header.astro
+++ b/astro-tailwind-alston/src/components/Header.astro
@@ -1,4 +1,4 @@
-<div class="flex items-center gap-12 border-b border-[#E4E7EC] h-16">
+<div class="flex items-center gap-12 border-b border-[#E4E7EC]">
     <div class="flex md:flex-[1_0_0] gap-2.5">
         <!-- <p class="pl-4 sm:px-16 font-bold leading-normal not-italic tracking-[-0.06225rem] text-[1.77925rem]">OPENCONF</p> -->
         <img src="/Header/OPENCONF.png" alt="OpenConf" class="pl-4 sm:px-16">
